Fix wrapping issue

--- a/src/client/components/PersonBar/PersonBar.less
+++ b/src/client/components/PersonBar/PersonBar.less
@@ -7,6 +7,7 @@
     padding: 0 2rem;
     background: #fff;
     border-bottom: 1px solid #c6c2bf;
+    min-width: max-content;
 
     p:not(.typo-element) {
         margin-left: 0.5rem;
